0.21
- fixed a password rendering bug: if a password field is not filled, now you'll not see the obfuscator after submit
- renamed "menu_drop_down" template to "menu"
- removed P4A_Menu::setType()
- removed tabbed menu
- removed P4A_Sheets_Group widget
- some bugfixes in CSS
- added P4A::addJavascript() and P4A::dropJavascript()
- changed javascript file inclusion in masks templates
- updated TODO
- updated README, removed info about untested browsers
- ie7 library has been implemented (http://dean.edwards.name/IE7/)

0.20
- fixed screen.css bug on Internet Explorer
- added beforeMoveRow,onMoveRow and afterMoveRow on P4A_Mask::nextRow()

0.19
- upgraded all pear packages
- added constant P4A_FORCE_HANDHELD_RENDERING to force handheld rendering on any device (useful to have a handheld preview)
- handheld CSS now has a sans-serif font
- handheld CSS now has a nice color for all the links

0.18
- updated rich text editor (FCKeditor 2.0 FC)

0.17
- done some PHP5 fixes, seems to work fine but we need more tests
- updated TODO
- created CREDITS file and moved credits from README
- updated some copyright informations
- fixed an error in CHANGELOG

0.16
- updated TODO
- disabled P4A_Sheets_Group and tabbed menu because they're not completed
- updated all copyright informations

0.15

- now p4a_message can handle messages without icons
- some language fixes in the "products_catalogue" application

0.14
- fixed a bug in P4A_Number::format, if null is passed, null is returned (not zero)
- added P4A_Message::autoClear() to enable/disable auto clearing of messages
- removed P4A_Label::setType() because it were formally uncorrect
- P4A now can handle file/image uploads within rich_textarea fields (disabled by default)
- added P4A_Field:enableFileUpload() and P4A_Field:enableImageUpload()

0.13
- various bugfix in P4A_Link
- updated caledar widget to 1.0